<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/enter_empl_no_or_dept_no"
            android:padding="12dp"
            style="@style/et_style"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spin_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_query"
            android:layout_marginTop="12dp"
            tools:listitem="@layout/raw_spinner_list" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/spin_select"
            android:layout_marginTop="12dp"
            android:onClick="@{listener::onClick}"/>


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerColor="@color/black"
            app:dividerThickness="1dp"
            app:layout_constraintTop_toBottomOf="@id/bt_submit"
            android:layout_marginTop="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_viewAllEmpl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/view_all_employees"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:layout_marginTop="12dp"
            android:onClick="@{listener::onClick}"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_viewAllDept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_style"
            android:text="@string/view_all_department"
            app:layout_constraintTop_toBottomOf="@id/bt_viewAllEmpl"
            android:layout_marginTop="12dp"
            android:onClick="@{listener::onClick}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>