<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/parentlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/ll_employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                android:text="@string/emp_no"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_empNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                tools:text="100013"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_deptNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                android:text="@string/dept_no"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_deptNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                tools:text="d001"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                android:text="@string/title"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                tools:text="Engineer"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                android:text="@string/salary"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                tools:text="65000"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txt_16"
                    android:text="@string/from_date"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_fromDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txt_16"
                    tools:text="1961-01-16"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txt_16"
                    android:text="@string/to_date"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_toDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txt_16"
                    tools:text="1961-01-16"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_deptName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                android:text="@string/dept_name"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_deptName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/txt_16"
                tools:text="Sales"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerThickness="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:dividerColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>